<resources>
    <string name="app_name">Medical Calculator</string>
    <string name="txtTitle">Convert Patient Weight</string>
    <string name="hint">Weight of Patient</string>
    <string name="radLbToKilo">Convert Pounds to Kilograms</string>
    <string name="radKiloToLb">Convert Kilograms to Pounds</string>
    <string name="btnConvert">Convert Weight</string>
    <string name="txtResult" />
</resources>
